# BackgroundSubtraction

src/: BackgroundSubtractionAverage.cpp  BackgroundSubtractionAverage.h  BackgroundSubtractionBase.cpp  BackgroundSubtractionBase.h  BackgroundSubtractionMultiGauss.cpp  BackgroundSubtractionMultiGauss.h  BackgroundSubtractionSingleGauss.cpp  BackgroundSubtractionSingleGauss.h  CMakeLists.txt  backgroundUsingAverage.cpp  main.cpp  mat.cpp
